creating the header

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,4 +1,5 @@
 @import "./directory.scss";
 @import "./menu-item.scss";
+@import "./header.scss";
 @import "./preview-collection.scss";
 @import "./collection-item.scss";
