--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
-*{
-    font-family: 'Roboto', sans-serif;
+* {
+    font-family: "Roboto", sans-serif;
+}
+
+.App {
+    width: 100%;
+    margin: 0;
+    padding: 0 10%;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    border-bottom: 1px solid;
 }
