--- a/src/styles/components/preview-collection.scss
+++ b/src/styles/components/preview-collection.scss
@@ -1,7 +1,7 @@
 .preview-collection {
     display: flex;
     flex-direction: column;
-    margin: 30px 10%;
+    margin: 30px 0;
 
     .title {
         font-size: 28px;
