creating sign up page

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,5 +1,8 @@
 @import "./directory.scss";
 @import "./menu-item.scss";
 @import "./header.scss";
+@import "./sign.scss";
+@import "./custom-button.scss";
+@import "./form-input.scss";
 @import "./preview-collection.scss";
 @import "./collection-item.scss";
