--- a/src/styles/components/custom-button.scss
+++ b/src/styles/components/custom-button.scss
@@ -13,10 +13,23 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    font-family: "Roboto", sans-serif;
 
     &:hover {
         background-color: white;
         color: black;
         border: 1px solid black;
+    }
+
+    &.google-sign-in {
+        background-color: dodgerblue;
+        color: #fff;
+        margin-left: 20px;
+
+        &:hover {
+            color: dodgerblue;
+            background: #fff;
+            border: 1px solid dodgerblue;
+        }
     }
 }
