--- a/src/styles/components/sign.scss
+++ b/src/styles/components/sign.scss
@@ -15,3 +15,10 @@
         margin: 10px 0;
     }
 }
+
+.logout-btn {
+    &:hover {
+        cursor: pointer;
+        border-bottom: 1px solid;
+    }
+}
