added cart dropdown

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -2,6 +2,7 @@
 @import "./menu-item.scss";
 @import "./header.scss";
 @import "./sign.scss";
+@import "./cart.scss";
 @import "./custom-button.scss";
 @import "./form-input.scss";
 @import "./preview-collection.scss";
