--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,16 @@ a {
 a:hover {
     border-bottom: 1px solid;
 }
+
+*::-webkit-scrollbar {
+    width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    outline: 0px solid slategrey;
+}
