--- a/src/styles/components/collection-item.scss
+++ b/src/styles/components/collection-item.scss
@@ -4,6 +4,8 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
+    opacity: 0.9;
 
     .image {
         width: 100%;
@@ -11,6 +13,14 @@
         background-size: cover;
         background-position: center;
         margin-bottom: 5px;
+    }
+
+    .custom-button {
+        display: none;
+        width: 80%;
+        opacity: 0.7;
+        position: absolute;
+        top: 255px;
     }
 
     .collection-footer {
@@ -27,6 +37,14 @@
 
         .price {
             width: 10%;
+        }
+    }
+
+    &:hover {
+        opacity: 1;
+        .custom-button {
+            opacity: 1;
+            display: block;
         }
     }
 }
