--- a/src/styles/components/custom-button.scss
+++ b/src/styles/components/custom-button.scss
@@ -14,6 +14,8 @@
     border: none;
     cursor: pointer;
     font-family: "Roboto", sans-serif;
+    display: flex;
+    justify-content: center;
 
     &:hover {
         background-color: white;
@@ -30,6 +32,18 @@
             color: dodgerblue;
             background: #fff;
             border: 1px solid dodgerblue;
+        }
+    }
+
+    &.inverted {
+        background-color: white;
+        color: black;
+        border: 1px solid black;
+
+        &:hover {
+            background-color: black;
+            color: white;
+            border: none;
         }
     }
 }
