--- a/src/styles/components/cart.scss
+++ b/src/styles/components/cart.scss
@@ -14,11 +14,11 @@
     &.hide {
         display: none;
     }
-
     .cart-items {
-        height: 340px;
+        height: 280px;
         display: flex;
         flex-direction: column;
+        overflow-y: scroll;
     }
 
     button {
@@ -44,5 +44,29 @@
         font-size: 10px;
         font-weight: bold;
         bottom: 12px;
+    }
+}
+
+.cart-item {
+    width: 100%;
+    display: flex;
+    height: 80px;
+    margin-bottom: 15px;
+
+    img {
+        width: 30%;
+    }
+
+    .item-details {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 10px 20px;
+
+        .name {
+            font-size: 16px;
+        }
     }
 }
